Crash starting Blender in Windows after timeline removal #54767

Closed
opened 2018-04-23 10:45:18 +02:00 by Antonio Vazquez · 9 comments

Windows 10 64 Bits
Compiled version using source code at 23/04/2018 10:40:00

Running Blender there is a segment fault in versioning_280.c in following lines:

 if (!MAIN_VERSION_ATLEAST(main, 280, 9)) {
	const wmWindowManager *wm = main->wm.first;
	const Scene *scene = main->scene.first;

	/* Action editors need a scene for creation. First, update active
	 * screens using the active scene of the window they're displayed in.
	 * Next, update remaining screens using first scene in main listbase. */

	for (wmWindow *win = wm->windows.first; win; win = win->next) {   // ERROR HERE, wm Is NULL

The problem is the variable wm is NULL because the main->wm.first is NULL,

Windows 10 64 Bits Compiled version using source code at 23/04/2018 10:40:00 Running Blender there is a segment fault in versioning_280.c in following lines: if (!MAIN_VERSION_ATLEAST(main, 280, 9)) { const wmWindowManager *wm = main->wm.first; const Scene *scene = main->scene.first; /* Action editors need a scene for creation. First, update active * screens using the active scene of the window they're displayed in. * Next, update remaining screens using first scene in main listbase. */ for (wmWindow *win = wm->windows.first; win; win = win->next) { // ERROR HERE, wm Is NULL The problem is the variable wm is NULL because the main->wm.first is NULL,
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Julian Eisel was assigned by Antonio Vazquez 2018-04-23 10:45:40 +02:00
Author
Member

@JulianEisel Let me know if you need debug something in windows, because this looks a windows only error.

@JulianEisel Let me know if you need debug something in windows, because this looks a windows only error.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I had this problem as well because of my userpref.blend. I deleted the file and the problem went away.

I had this problem as well because of my `userpref.blend`. I deleted the file and the problem went away.
Author
Member

@dfelinto Yes, deleting this file works, but maybe we could add a NULL check to avoid this error if some user don't remove this file, no?

@dfelinto Yes, deleting this file works, but maybe we could add a NULL check to avoid this error if some user don't remove this file, no?

Added subscriber: @mont29

Added subscriber: @mont29

This is also triggering when you try to link some datablock! very bad handling, fix is incoming.

This is also triggering when you try to link some datablock! very bad handling, fix is incoming.

This issue was referenced by dc16f6fedc

This issue was referenced by dc16f6fedc0c551032e1b732850cfb6ab2b5c785

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54767
No description provided.