Fix T54767: Crash in versionning code for recent editors' removal.

Always check for non-Null pointers there! This versionning code is
called from many different places, with many different kind of Main's.